--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,9 +24,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set up environment variables
-        run: |
+        run: |                                                          
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
 
       - name: Run application
-        run: |
-          streamlit run app.py
+        run: |  
+          python app.py
+          
