--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,10 +24,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set up environment variables
-        run: |                                                          
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
+        run: |
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
 
       - name: Run application
-        run: |  
+        run: |
           streamlit run app.py
-          
